--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
 
     <string name="open_naver_map_market">market://details?id=com.nhn.android.nmap</string>
     <string name="open_naver_map_url_scheme">nmap://place?lat=%1$s&amp;lng=%2$s&amp;name=%3$s&amp;appname=%4$s</string>
+
+    <string name="filter_dialog_sejong">세종시</string>
+    <string name="filter_dialog_gangwon">강원도</string>
+    <string name="filter_dialog_jeollabuk">전라북도</string>
 </resources>
