feat: add 'all' item to filter dialog
*remove sigungu code param

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="filter_dialog_sejong">세종시</string>
     <string name="filter_dialog_gangwon">강원도</string>
     <string name="filter_dialog_jeollabuk">전라북도</string>
+
+    <string name="filter_dialog_all">전체</string>
 </resources>
