--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="culture_center_title">문화시설</string>
     <string name="leisure_sports_title">레포츠</string>
     <string name="restaurant_title">음식점</string>
+
+    <string name="empty_screen_waring_text">데이터를 불러올 수 없습니다.</string>
 </resources>
